--- a/css/style.css
+++ b/css/style.css
@@ -355,11 +355,11 @@
 }
  .menu-area-main li:hover a, .menu-area-main li:focus a {
      color: #fff;
-     background: #f00;
+     background: #ec2027;
 }
  .menu-area-main li.active a {
      color: #fff;
-     background: #f00;
+     background: #ec2027;
 }
  .right_cart_section {
      float: right;
@@ -882,7 +882,7 @@
 }
  .main-menu ul li:first-child {
      margin-left: 0;
-     background: #f00;
+     background: #ec2027;
 }
  .main-menu ul>li>ul {
      opacity: 0;
@@ -966,7 +966,7 @@
      padding: 0px 20px;
 }
  .button_login {
-    background-color: #f00;
+    background-color: #ec2027;
      padding: 4px 12px;
      border-radius: 5px;
 }
@@ -1060,12 +1060,12 @@
      font-size: 16px;
      text-transform: uppercase;
      background-color: #fff;
-     color: #ff0000;
+     color: #ec2027;
      padding: 10px 40px;
      display: inline-block;
 }
  .text-bg a:hover {
-     background-color: #ff0000;
+     background-color: #ec2027;
      color: #fff;
 }
  .text-img figure {margin: 0;}
@@ -1149,8 +1149,8 @@
      display: inline-block;
 }
  .our .Games a:hover {
-     background-color: #ff0000;
-     border: #ff0000 solid 1px;
+     background-color: #ec2027;
+     border: #ec2027 solid 1px;
      color: #fff;
 }
 /** end our section **/
@@ -1175,7 +1175,7 @@
     width: 100%;
 }
  .border_right {
-    border-right: #f00 solid 6px;
+    border-right: #ec2027 solid 6px;
 }
  .box_text {
      max-width: 531px;
@@ -1199,8 +1199,8 @@
      margin-top: 11px;
 }
  .box_text a:hover {
-     background-color: #ff0000;
-     border: #ff0000 solid 1px;
+     background-color: #ec2027;
+     border: #ec2027 solid 1px;
      color: #fff;
 }
 /** end We_are section **/
@@ -1249,7 +1249,7 @@
      margin-bottom: 60px;
 }
  .contact .contact_bg {
-     background: #ff0000;
+     background: #ec2027;
      width: 100%;
      height: 100%;
      padding: 0;
@@ -1285,7 +1285,7 @@
  .contact .contact_bg .send:hover {
      background-color: #fff;
 border: #fff solid 1px;
-color: #f00;
+color: #ec2027;
 }
 /** end contact section **/
 /** testimonial **/
@@ -1369,7 +1369,7 @@ color: #f00;
      text-transform: uppercase;
      padding-bottom: 20px;
      padding-bottom: 3px;
-     border-bottom: #ff0000 solid 4px;
+     border-bottom: #ec2027 solid 4px;
      margin-bottom: 20px;
      width: 160px;
 }
@@ -1391,8 +1391,8 @@ color: #f00;
 }
  .submit {
     padding: 14px 45px;
-     border: #f00 solid 1px;
-     background: #f00;
+     border: #ec2027 solid 1px;
+     background: #ec2027;
      color: #fff;
      margin-left: -5px;
      font-weight: 500;
@@ -1403,7 +1403,7 @@ color: #f00;
  .submit:hover {
      background: #d2cece;
      border: #d2cece solid 1px;
-     color: #f00;
+     color: #ec2027;
 }
  ul.social_link {
     padding-bottom: 35px;
@@ -1435,7 +1435,7 @@ color: #f00;
      margin-top: -27px;
 }
  ul.Menu_footer li a:hover{
-     color: #ff0000;
+     color: #ec2027;
 }
  ul.Links_footer {
      list-style: none;
@@ -1452,7 +1452,7 @@ color: #f00;
      margin-top: -27px;
 }
  ul.Links_footer li a:hover{
-     color: #ff0000;
+     color: #ec2027;
 }
  ul.Links_footer li {
      padding-bottom: 5px;
@@ -1487,7 +1487,7 @@ color: #f00;
      color: #000;
 }
  .copyright a:hover {
-     color: #f00;
+     color: #ec2027;
 }
 /** end footer **/
 /*--------------------------------------------------------------------- ener page css ---------------------------------------------------------------------*/
