--- a/css/templatemo-digital-trend.css
+++ b/css/templatemo-digital-trend.css
@@ -8,7 +8,7 @@ https://templatemo.com/tm-538-digital-trend
   
   @font-face {
       font-family: 'Plain-Regular';
-      src: url('../fonts/Plain-Regular.woff2') format('woff2'),
+      src: url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap') format('woff2'),
           url('../fonts/Plain-Regular.woff') format('woff');
       font-weight: normal;
       font-style: normal;
@@ -32,19 +32,19 @@ https://templatemo.com/tm-538-digital-trend
 
   :root {
     --primary-color:        #057a8d;
-    --secondary-color:      #f1c111;
+    --secondary-color:      #d70000;
     --white-color:          #ffffff;
     --dark-color:           #171819;
     --project-bg:           #f0f8ff;
-    --menu-bg:              #0c8195;
+    --menu-bg:              #f3f3f3;
 
     --title-color:          #15141a;
     --gray-color:           #909090;
     --link-color:           #404040;
     --p-color:              #666262;
 
-    --base-font-family:     'Plain-Light', sans-serif;
-    --title-font-family:    'Plain-Regular', sans-serif;
+    --base-font-family:     'Barlow Condensed', sans-serif;
+    --title-font-family:    'Barlow Condensed', sans-serif;
     --font-bold-family:     'Plain-Bold', sans-serif;
     --font-weight-bold:     bold;
 
@@ -153,7 +153,7 @@ https://templatemo.com/tm-538-digital-trend
 
   .custom-btn.btn-bg {
     background: var(--white-color);
-    color: var(--primary-color);
+    color: var(--dark-color);
     border-color: transparent;
 	transition: all .3s ease;
   }
@@ -230,12 +230,12 @@ https://templatemo.com/tm-538-digital-trend
   }
 
   .navbar-brand {
-    color: var(--white-color);
+    color: var(--dark-color);
     font-size: var(--h2-font-size);
   }
 
   .nav-link {
-    color: var(--white-color);
+    color: var(--dark-color);
     font-size: var(--menu-font-size);
     letter-spacing: 0.4px;
     margin: 0 1.6em;
@@ -321,7 +321,7 @@ https://templatemo.com/tm-538-digital-trend
     position: absolute;
     right: 0;
     left: 0;
-    background: var(--white-color);
+    background: var(--dark-color);
     width: 30px;
     height: 2px;
     content: '';
@@ -342,14 +342,21 @@ https://templatemo.com/tm-538-digital-trend
   -----------------------------------------*/
 
   .hero {
-    position: relative;
-    padding: 5em 0;
-    overflow: hidden;
+    background-position: center; 
+    background-size: auto; 
+    padding: 6% 0;
+    height:614px;
+    width: 100%;
+    background: url("../images/bg_home.jpg") center;
   }
-
-  .hero-bg {
-    background: linear-gradient(170deg, var(--primary-color) 64%, var(--white-color) 30%);
-  }
+  .layer {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
   .hero-image {
     position: relative;
